# embaralha_palavra

./: README.md  embaralha.py  pyproject.toml
